# openfmt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  comment_parser.c  comment_parser.h  common.c  common.h  detector.c  detector.h  enum_ele_parser.c  enum_ele_parser.h  enum_parser.c  enum_parser.h  extend_parser.c  extend_parser.h  import_parser.c  import_parser.h  main.c  message_ele_parser.c  message_ele_parser.h  message_parser.c  message_parser.h  object_parser.c  object_parser.h  oneof_parser.c  oneof_parser.h  option_parser.c  option_parser.h  package_parser.c  package_parser.h  proto.c  proto.h  proto_parser.c  proto_parser.h  service_ele_parser.c  service_ele_parser.h  service_parser.c  service_parser.h  syntax_parser.c  (+1 more)
.github/workflows/: cmake-multi-platform.yml
json/: json_parser.c  json_parser.h
lib/: dir.c  dir.h  doubly_linked_list.c  doubly_linked_list.h  file.c  file.h  g_hash_table.c  g_hash_table.h  g_list.c  g_list.h  hash_table.c  hash_table.h  linked_list.c  linked_list.h  memory.c  memory.h  os.c  os.h  queue.c  queue.h  stack.c  stack.h  str.c  str.h  str_list.c  str_list.h  str_queue.c  str_queue.h  type.c  type.h  uuid.c  uuid.h
proto/: comment_parser.c  comment_parser.h  common.c  common.h  detector.c  detector.h  enum_ele_parser.c  enum_ele_parser.h  enum_parser.c  enum_parser.h  extend_parser.c  extend_parser.h  import_parser.c  import_parser.h  main.c  message_ele_parser.c  message_ele_parser.h  message_parser.c  message_parser.h  object_parser.c  object_parser.h  oneof_parser.c  oneof_parser.h  option_parser.c  option_parser.h  package_parser.c  package_parser.h  proto.c  proto.h  proto_parser.c  proto_parser.h  service_ele_parser.c  service_ele_parser.h  service_parser.c  service_parser.h  syntax_parser.c  syntax_parser.h
tests/: macro.c  macro.h
tests/lib/: CMakeLists.txt  g_list_test.c  g_list_test.h  main.c  test_dir.c  test_dir.h  test_g_hash_table.c  test_g_hash_table.h  test_hash_table.c  test_hash_table.h  test_str.c  test_str.h  test_uuid.c  test_uuid.h
tests/lib/test_data/malformed/: test_data_1.proto
tests/proto/: CMakeLists.txt  main.c  test_file_format.c  test_file_format.h
tests/proto/test_data/formatted/: test_data_1.proto.txt  test_data_10.proto.txt  test_data_11.proto.txt  test_data_2.proto.txt  test_data_3.proto.txt  test_data_4.proto.txt  test_data_5.proto.txt  test_data_6.proto.txt  test_data_7.proto.txt  test_data_8.proto.txt  test_data_9.proto.txt
tests/proto/test_data/malformed/: test_data_1.proto  test_data_10.proto  test_data_11.proto  test_data_2.proto  test_data_3.proto  test_data_5.proto  test_data_6.proto  test_data_7.proto  test_data_8.proto  test_data_9.proto  test_new_lines.proto
util/: file_helper.c  file_helper.h  util.c  util.h  util_test.c
